--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <!--<script data-require="angular.js@*" data-semver="1.2.10" src="http://code.angularjs.org/1.2.10/angular.js"></script>-->
     <script data-require="angular.js@*" data-semver="1.2.13" src="js/angular.min.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js"></script>
   </head>
 
