--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <ul>
 		<li ng-repeat="activity in activities | filter:userQuery | filter:language | filter:filterFn |  orderBy:orderChoice">			
 			<span ng-hide="editing" ng-click="editing = true">{{activity.title}} | {{activity.language}}</span>
-            <form ng-show="editing" ng-submit="editing = false | editEntry()">
+            <form ng-show="editing" ng-submit="editing = false; editEntry()">
 				<label>Title:</label>
 				<input type="text" ng-model="activity.title" placeholder="Title" ng-required/>
 				<label>Language:</label>
