--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	<select ng-model="orderChoice">
 		<option value="title">Alphabetical</option>
-		<option value="timeStamp">Creation date</option>
+		<option value="createdTimeStamp">Creation date</option>
 	</select>
 	
 	<select ng-model="language">
