--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <ul>
 		<li ng-repeat="activity in activities | filter:userQuery | filter:language | filter:filterFn |  orderBy:orderChoice">			
-			<span ng-hide="editing" ng-click="editing = true">{{activity.title}} | {{activity.language}}</span>
+			<span ng-hide="editing" ng-click="editing = true">{{activity.title}} | {{activity.language}}<button class="btn" ng-click="deleteEntry(activity)">Del</button></span>
             <form ng-show="editing" ng-submit="editing = false; editEntry(activity)">
 				<label>Title:</label>
 				<input type="text" ng-model="activity.title" placeholder="Title" ng-required/>
