--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html ng-app="testApp">
 <head>
 	<title>Test AngularJS app</title>
+    <!--IndexedDBShim allows to use IndexedDB in older browsers without native IndexedDB support, but with WebSQL available-->
+    <script type="text/javascript" src="libs/IndexedDBShim.min.js"></script>
     <script type="text/javascript" src="libs/angular.js"></script>
 	<script src="js/controllers.js"></script>
 </head>
