--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <ul>
         <!-- Single activity line -->
 		<li ng-repeat="activity in activities | filter:userQuery | filter:language | filter:filterFn |  orderBy:orderChoice">			
-			<span ng-hide="editing" ng-click="editing = true">{{activity['title'][activity.langcode]}} | {{activity.language}}</span>
+			<span ng-hide="editing" ng-click="editing = true">{{activity['title'][activity.langcode]}} | {{activity.langcode}}</span>
             <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
             
             <form ng-show="editing" ng-submit="editing = false; editEntry(activity)">
@@ -52,6 +52,10 @@
     <form ng-submit="addEntry()">
         <label>Title:</label>
         <input type="text" ng-model="activity.title" placeholder="Title" ng-required/>
+        <select ng-model="activity.langcode">
+            <option value="en">English</option>
+            <option value="ru">Russian</option>
+        </select>
         <br/>
         <button class="btn" type="submit">Add</button>
     </form>
