Finalize IndexedDB support

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		<option value="createdTimeStamp">Creation date</option>
 	</select>
 	
-	<select ng-model="language">
-		<option value="English">English</option>
-		<option value="Russian">Russian</option>
+	<select ng-model="langcode">
+		<option value="en">English</option>
+		<option value="ru">Russian</option>
 	</select>
     
     
