--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <ul>
         <!-- Single activity line -->
 		<li ng-repeat="activity in activities | filter:userQuery | filter:language | filter:filterFn |  orderBy:orderChoice">			
-			<span ng-hide="editing" ng-click="editing = true">{{activity['title'][activity.langcode]}} | {{activity.langcode}}</span>
+			<!--<span ng-hide="editing" ng-click="editing = true">{{activity['title'][activity.langcode]}} | {{activity.langcode}}</span>-->
+            <span ng-hide="editing" ng-click="editing = true">{{activity['title']['ru']}} | {{activity.langcode}}</span>
             <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
             
             <form ng-show="editing" ng-submit="editing = false; editEntry(activity)">
