Finalize IndexedDB support

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<option value="createdTimeStamp">Creation date</option>
 	</select>
 	
+    <!-- This filter will search through all the fields, nod only through activity.langcode -->
 	<select ng-model="langcode">
 		<option value="en">English</option>
 		<option value="ru">Russian</option>
@@ -37,10 +38,11 @@
             <form ng-show="editing" ng-submit="editing = false; editEntry(activity)">
 				<label>Title:</label>
 				<input type="text" ng-model="activity['title'][activity.langcode]" placeholder="Title" ng-required/>
-				<label>Language:</label>
-				<input type="text" ng-model="activity.language" placeholder="Language" ng-required/>
                 <label>Langcode:</label>
-				<input type="text" ng-model="activity.langcode" placeholder="Langcode" ng-required/>
+				<select ng-model="activity.langcode">
+                    <option value="en">English</option>
+                    <option value="ru">Russian</option>
+                </select>
 				<br/>
 				<button class="btn" type="submit">Save</button>
 			</form>
