--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html ng-app="testApp">
 <head>
 	<title>Test AngularJS app</title>
+    <!-- Custom CSS we need globally -->
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    
     <!--IndexedDBShim allows to use IndexedDB in older browsers without native IndexedDB support, but with WebSQL available-->
     <script type="text/javascript" src="libs/IndexedDBShim.min.js"></script>
     <script type="text/javascript" src="libs/angular.js"></script>
