Finalize IndexedDB support

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <option value="ru">Russian</option>
         </select>
         <br/>
-        <button class="btn" type="submit">Add</button>
+        <button class="btn" type="submit" ng-disabled="addActivity.$invalid">Add</button>
     </form>
 
 
