Finalize IndexedDB support

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <option value="ru">Russian</option>
                 </select>
 				<br/>
-				<button class="btn" type="submit">Save</button>
+				<button class="btn" type="submit" ng-disabled="editActivity.$invalid">Save</button>
 			</form>
 		</li>
 	</ul>
