--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <!-- Single activity line -->
 		<!--<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderBy:orderChoice">-->
         <li ng-repeat="activity in activities track by activity.uuid">
+            {{activity.id}}
 			<span ng-hide="editing" ng-click="editing = true">{{activity['title'][activity.langcode]}} | {{activity.langcode}}</span>
             <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
             
