--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     
     <ul>
         <!-- Single activity line -->
+        <!--"Error: [ngRepeat:dupes] Duplicates in a repeater are not allowed" can be solved by adding "track by SomeUniqueKey"-->
+        <!--<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderBy:orderChoice track by activity.uuid">-->
 		<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderBy:orderChoice">
-        <!--<li ng-repeat="activity in activities track by activity.uuid">-->
-            {{activity.id}}
 			<span ng-hide="editing" ng-click="editing = true">{{activity['title'][activity.langcode]}} | {{activity.langcode}}</span>
             <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
             
