--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         <!-- Single activity line -->
         <!--"Error: [ngRepeat:dupes] Duplicates in a repeater are not allowed" can be solved by adding "track by SomeUniqueKey"-->
         <!--<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderBy:orderChoice track by activity.uuid">-->
+        <!--Probably "Error: [ngRepeat:dupes]" appeared due to not filled fields like Title or Langcode -->
 		<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderBy:orderChoice">
-			<span ng-hide="editing" ng-click="editing = true">{{activity['title'][activity.langcode]}} | {{activity.langcode}}</span>
+			<span ng-hide="editing" ng-click="editing = true">{{activity['0']['title'][activity.langcode]}} | {{activity.0.langcode}}</span>
             <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
             
             <form name="editActivity" ng-show="editing" ng-submit="editing = false; editEntry(activity)" novalidate >
