--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <!--<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderBy:orderChoice track by activity.uuid">-->
         <!--Probably "Error: [ngRepeat:dupes]" appeared due to not filled fields like Title or Langcode -->
         
-		<!--<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderBy:orderChoice">-->
-        <li ng-repeat="activity in activities | filter:userQuery | filter:langcode | orderBy:orderChoice">
+		<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderBy:orderChoice">
 			<span ng-hide="editing" ng-click="editing = true">{{activity['0']['title'][activity.0.langcode]}} | {{activity.0.langcode}}</span>
             <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
             
