--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     Search: <input ng-model="userQuery">
 	
 	<select ng-model="orderChoice">
-		<option value="title">Alphabetical</option>
+		<!--<option value="title">Alphabetical</option>-->
+        <option value="activity['0']['title'][activity.0.langcode]">Alphabetical</option>
 		<option value="createdTimeStamp">Creation date</option>
 	</select>
 	
