Finalize IndexedDB support

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	
 	<select ng-model="orderChoice">
 		<!--<option value="title">Alphabetical</option>-->
-        <option value="activity['0']['title'][activity.0.langcode]">Alphabetical</option>
+        <option value="['0']['title']['en']">Alphabetical</option>
 		<option value="createdTimeStamp">Creation date</option>
 	</select>
 	
