--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <!-- Single activity line -->
         <!--"Error: [ngRepeat:dupes] Duplicates in a repeater are not allowed" can be solved by adding "track by SomeUniqueKey"-->
         <!--<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderBy:orderChoice track by activity.uuid">-->
-        <!--Probably "Error: [ngRepeat:dupes]" appeared due to not filled fields like Title or Langcode -->
         <!-- $$hashKey contains dupes, possible to see at DevTools console objects array -->
+        <!-- track by $index -->
         
 		<!--<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderBy:orderChoice">-->
-        <li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderObjectBy:'modifiedTimeStamp'">
+        <li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderObjectBy:'modifiedTimeStamp' track by $index">
 			<span ng-hide="editing" ng-click="editing = true">{{activity['0']['title'][activity.0.langcode]}} | {{activity.0.langcode}}</span>
             <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
             
