--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <!-- Single activity line -->
         <!-- Use "track by object.someUniqueKey" with ng-repeat to improve performance and prevent [ngRepeat:dupes] errors -->
 		<!-- orderBy standard filter works only with arrays, not with objects and sub-objects -->
-        <li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderObjectBy:'modifiedTimeStamp' track by activity.uuid">
+        <!--<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderObjectBy:'modifiedTimeStamp' track by activity.uuid">-->
+        <li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderObjectBy:'title[en]' track by activity.uuid">
 			<span ng-hide="editing" ng-click="editing = true">{{activity['0']['title'][activity.0.langcode]}} | {{activity.0.langcode}}</span>
             <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
             
