--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	
 	<select ng-model="orderChoice">
 		<!--<option value="title">Alphabetical</option>-->
-        <option value="langcode">Alphabetical</option>
-		<option value="createdTimeStamp">Creation date</option>
+        <option value="orderObjectByINT">Alphabetical</option>
+		<option value="orderObjectByTXT">Creation date</option>
 	</select>
 	
     <!-- This filter will search through all the fields, nod only through activity.langcode -->
@@ -39,7 +39,8 @@
 		<!-- orderBy standard filter works only with arrays, not with objects and sub-objects -->
         <!--<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderObjectBy:'modifiedTimeStamp' track by activity.uuid">-->
         <!--You may order objects in ascending ('ascend') or in descending ('descend') order -->
-        <li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderObjectByINT:'title':'ascend' track by activity.uuid">
+        <!--<li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderObjectByINT:'title':'ascend' track by activity.uuid">-->
+        <li ng-repeat="activity in activities | filter:userQuery | filter:langcode | filter:filterNot123 | orderChoice:'title':'ascend' track by activity.uuid">
 			<span ng-hide="editing" ng-click="editing = true">{{activity['0']['title'][activity.0.langcode]}} | {{activity.0.langcode}}</span>
             <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
             
