--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body ng-controller="StartCtrl">
 
     <input type="text" ng-model="testOneTimeBind">
+    {{::testOneTimeBind}}
+    </br>
     {{testOneTimeBind}}
     
     
