--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 <body ng-controller="StartCtrl">
 
-    <input type="text" ng-model="testOneTimeBind">
+    <input type="text" ng-model="::testOneTimeBind">
     {{::testOneTimeBind}}
     </br>
     {{testOneTimeBind}}
