--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script type="text/javascript" src="libs/angular.js"></script>
 	<script src="js/controllers.js"></script>
     
-    <link rel="import" href="components/core-toolbar/core-toolbar.html">
+    <link rel="import" href="components/paper-checkbox/paper-checkbox.html">
 </head>
 	
 <body ng-controller="StartCtrl">
     
-    </core-toolbar><div>Toolbar</div></core-toolbar>
+    <paper-checkbox></paper-checkbox>
 
     <input type="text" ng-model="::testOneTimeBind">
     {{::testOneTimeBind}}
