Test Polymer lib

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="libs/angular.js"></script>
 	<script src="js/controllers.js"></script>
     
+    <script src="components/bower_components/platform/platform.js"></script>
     <link rel="import" href="components/bower_components/core-selector/core-selector.html">
 </head>
 	
