--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--IndexedDBShim allows to use IndexedDB in older browsers without native IndexedDB support, but with WebSQL available-->
     <script type="text/javascript" src="libs/IndexedDBShim.min.js"></script>
     <script type="text/javascript" src="libs/angular.js"></script>
+    <script type="text/javascript" src="libs/angular-route.js"></script>
 	<script src="js/controllers.js"></script>
 </head>
 	
