--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 <!--Button to delete this particular entry-->
                 <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
                 
+                <!--This particular entry langcode -->
+                <span edit-activity="activity.0.langcode"></span>
             </li>
         </ul>
     
