--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
                 
                 <!--This particular entry langcode -->
-                <span edit-activity="activity.0.langcode"></span>
+                <edit-activity></edit-activity>
             </li>
         </ul>
     
