--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
                 
                 <!--Here activity editing form will be placed-->
-                <edit-activity></edit-activity>
+                <edit-activity2></edit-activity2>
                 
             </li>
         </ul>
