--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                 <button ng-hide="editing" ng-click="deleteEntry(activity)">Del</button>
                 
                 <!--Here activity editing form will be placed-->
-                <!--<edit-activity2></edit-activity2>-->
-                <span edit-activity2=""></span>
+                <edit-activity></edit-activity>
                 
             </li>
         </ul>
