--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="testApp">
+<html ng-app="activitiesM">
     <head>
         <title>Test AngularJS app</title>
         <!-- Custom CSS we need globally -->
